infra/kubernetes/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gramly-staging
  labels:
    gramly.tech/contour: private
    gramly.tech/environment: staging
